--- a/udagram-deployment/env-configmap.yaml
+++ b/udagram-deployment/env-configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: env-config
 data:
   POSTGRES_USERNAME: postgres
-  POSTGRES_PASSWORD: Passw0rd
+  POSTGRES_PASSWORD: postgres
   POSTGRES_HOST: cdr.ctxor2voab1b.us-east-1.rds.amazonaws.com
   POSTGRES_DB: postgres
   AWS_BUCKET: udagram-530638009034-dev
