--- a/udagram-deployment/reverseproxy-deployment.yaml
+++ b/udagram-deployment/reverseproxy-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: reverseproxy
-        image: John0Isaac/reverseproxy:v4a
+        image: john0isaac/udagram-reverseproxy:v4a
         ports:
         - containerPort: 80
         resources:
